Adjusted layout fixed heart rate overlap when > 3

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -16,7 +16,7 @@
   }
 
   #minutes {
-    fill: '#868686';
+    fill: '#cccccc';
     x: 37%
   }
 
@@ -27,7 +27,7 @@
     text-anchor: middle;
     x: 27%;
     y: 32%;
-    fill: '#868686';
+    fill: '#cccccc';
   }
 
 .divider {
@@ -35,21 +35,21 @@
   y: 36%;
   width: 40%;
   height: 1%;
-  fill: '#868686';
+  fill: '#cccccc';
 }
 
 #logo {
-  x: 11%;
-  y: 96;
-  width: 12%;
-  height: 9%;
+  x: 13%;
+  y: 98;
+  width: 30;
+  height: 19;
 }
 
 /* ------- BATTERY ------- */
 #battery {
   x: 32%;
   y: 46%;
-  fill: '#868686';
+  fill: '#cccccc';
   font-family: Colfax-Regular;
   font-size: 20;
 }
@@ -64,19 +64,21 @@
 
 /* --------  HRM  -------- */
 .heart {
-  x: 17%;
-  y: 173;
+  x: 16%;
+  y: 172;
   height: 30;
   width: 30;
   fill: "#821414";
 }
 
 #heartRate {
-  x: 27%;
+  x: 26%;
   y: 79%;
-  fill: '#868686';
+  fill: '#cccccc';
   font-family: Colfax-Regular;
   font-size: 30;
+  text-length: 3;
+  text-anchor: start;
 }
 
 #hrCircle {
@@ -90,14 +92,14 @@
   fill: "#2f2f2f";
   cx: "30%";
   cy: "30%";
-  r: 47;
+  r: 55;
 }
 
 .hrCircleInner {
   fill: "#111111";
   cx: "30%";
   cy: "30%";
-  r: 45;
+  r: 52;
 }
 
 /* -------- STATS -------- */
@@ -111,16 +113,16 @@
 
   .battery {
     x: 27%;
-    y: 99;
+    y: 98;
     fill: "#0d8050";
   }
 
   .steps {
-    y: 6%;
+    y: 5%;
   }
 
   .distance {
-    y: 25%;
+    y: 24%;
   }
 
   .calories {
@@ -128,11 +130,11 @@
   }
 
   .active {
-    y: 61%;
+    y: 62%;
   }
 
   .elevation {
-    y: 79%;
+    y: 80%;
   }
 
 .stats {
@@ -140,41 +142,32 @@
   y: 10%;
   width: 30%;
   text-length: 10;
-  fill: '#868686';
+  fill: '#cccccc';
   font-family: Colfax-Regular;
   font-size: 20;
 }
 
   #stepsValue {
-    y: 12%;
-    fill: '#868686';
-    text-length: 10;
+    y: 10%;
   }
 
   #distanceValue {
-    y: 31%;
-    fill: '#868686';
-    text-length: 10;
+    y: 30%;
   }
 
   #caloriesValue {
     y: 49%;
-    fill: '#868686';
-    text-length: 10;
   }
 
   #activeMinutesValue {
-    y: 67%;
-    fill: '#868686';
-    text-length: 10;
+    y: 68%;
   }
 
   #elevationGainValue {
-    y: 85%;
-    fill: '#868686';
-    text-length: 10;
+    y: 87%;
   }
 
+/* --------- PROGRESS --------- */
 
 .progress {
   font-family: Colfax-Bold;
@@ -188,17 +181,17 @@
   }
 
   #stepsProgress {
-    y: 20%;
+    y: 18%;
   }
   #stepsProgressEmpty {
-    y: 20%;
+    y: 18%;
   }
 
   #distanceProgress {
-    y: 38%;
+    y: 37%;
   }
   #distanceProgressEmpty {
-    y: 38%;
+    y: 37%;
   }
 
   #caloriesProgress {
@@ -209,15 +202,15 @@
   }
 
   #activeMinutesProgress {
-    y: 74%;
+    y: 75%;
   }
   #activeMinutesProgressEmpty {
-    y: 74%;
+    y: 75%;
   }
 
   #elevationGainProgress {
-    y: 92%;
+    y: 94%;
   }
   #elevationGainProgressEmpty {
-    y: 92%;
+    y: 94%;
   }
